Integrazione meteo API e parsing XML, con persistenza su MongoDB. Aggiunta endpoint per ricerca stazioni meteo. Mancano operazioni CRUD per le temperature, ma è possibile estenderle in futuro. Testato con Postman, tutto funziona correttamente.
